--- a/konmiru_app/app/views/users/all.html.erb
+++ b/konmiru_app/app/views/users/all.html.erb
@@ -77,6 +77,10 @@
     <% end %>
     <!-- 食材リストここまで -->
   </div>
+  <!-- ページネーションのリンク-->
+  <div class="item-paginate">
+    <%= paginate @all_recipe %>
+  </div>
   
 </main>
 <!-- ～メインコンテンツ -->
