--- a/konmiru_app/app/views/users/result_all.html.erb
+++ b/konmiru_app/app/views/users/result_all.html.erb
@@ -76,6 +76,10 @@
   </div>
     <!-- 食材リストここまで -->
   </div>
+  <!-- ページネーションのリンク-->
+  <div class="item-paginate">
+    <%= paginate @recipes %>
+  </div>
   
 </main>
 <!-- ～メインコンテンツ -->
