ページタイトル名の修正

--- a/konmiru_app/app/views/layouts/application.html.erb
+++ b/konmiru_app/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dish-Choice</title>
+    <title>Today-Dish-Choice | 本日の献立決め</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
