Turbo Driveを一時的に有効化

--- a/konmiru_app/app/views/users/result_current.html.erb
+++ b/konmiru_app/app/views/users/result_current.html.erb
@@ -78,9 +78,12 @@
     <!-- 食材リストここまで -->
 
   <!-- ページネーションのリンク-->
-  <div class="item-paginate">
-    <%= paginate @recipes %>
-  </div>
+  <% if @recipes.present? %>
+    <div class="item-paginate">
+      <%= paginate @recipes %>
+    </div>
+  <% end %>
+
 </main>
 
 
