--- a/konmiru_app/public/home/index.css
+++ b/konmiru_app/public/home/index.css
@@ -129,7 +129,7 @@ main {
 button {
   position: absolute;
   z-index: 2;
-  right: 0%;  
+  right: -5%;  
   top: 50%;
   transform: translateY(-50%); 
   /* 背景を透明 */
@@ -337,6 +337,10 @@ button {
     width: 100%;
     height: 4em;
   }
+
+  button {
+  right: 0%;  
+}
 
   .search-text,
   .announce-text {
