--- a/konmiru_app/app/views/recipes/show.html.erb
+++ b/konmiru_app/app/views/recipes/show.html.erb
@@ -13,12 +13,12 @@
       <div class="header-link-text">ログアウト</div>
     <% end %>
     <!-- ユーザー一覧ページ -->
-    <%= link_to all_users_path, class:"header-link" do %>
+    <%= link_to all_users_path, data: { turbo: "false" }, class:"header-link" do %>
       <div class="link-icon"><i class="fa-solid fa-users"></i></div>
       <div class="header-link-text">レシピ一覧</div>
     <% end %>
     <!-- ホームページリンク -->
-    <%= link_to index_path, class:"header-link" do %>
+    <%= link_to index_path, data: { turbo: "false" }, class:"header-link" do %>
       <div class="link-icon"><i class="fa-solid fa-house"></i></div>
       <div class="header-link-text">ホーム</div>
     <% end %>
@@ -62,11 +62,10 @@
   
   <% if @current_user == @recipe.user %>
     <!-- レシピ編集ページ -->
-    <div><%= link_to "レシピを編集する", edit_user_recipe_path, class: "recipe-edit btn" %></div>
-  
+    <div><%= link_to "レシピを編集する", edit_user_recipe_path, class: "recipe-edit btn", data: { turbo: "false" } %></div>
     <!-- レシピ削除ボタン -->
     <div>
-      <%= link_to "レシピを削除する", user_recipe_path(@recipe), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: "recipe-delete btn" %>
+      <%= link_to "レシピを削除する", user_recipe_path(@recipe), method: :delete, data: { turbo: "false", confirm: '本当に削除しますか？' },    class: "recipe-delete btn" %>
     </div>
   <% end %>
 </main>
