検索ボタンの位置修正

--- a/konmiru_app/public/home/index.css
+++ b/konmiru_app/public/home/index.css
@@ -129,7 +129,7 @@ main {
 button {
   position: absolute;
   z-index: 2;
-  right: -5%;  
+  right: -5px; 
   top: 50%;
   transform: translateY(-50%); 
   /* 背景を透明 */
