--- a/konmiru_app/public/session/new.css
+++ b/konmiru_app/public/session/new.css
@@ -36,11 +36,12 @@ main {
 .mini-message {
   color:#fb914a;
   margin-top:40px;
-  border-bottom: 1px dotted #fb914a ;
+  border-bottom: 0.8px solid #fb914a ;
 }
 
 .mini-message h3 {
-  margin-bottom:0.4em;
+  margin-bottom:0.3em;
+  font-size: 1.0em;
 }
 
 .form-message {
@@ -52,25 +53,29 @@ main {
   margin-bottom:1em;
 }
 
+.label-container {
+  margin:0.5em 0em;
+}
+
 .form-label {
-  margin-right:0.5em;
-  font-size:1.2em;
+  font-size:0.9em;
 }
 
 .field_with_errors {
   display: block;
-  font-size: 1em;
+  font-size: 0.8em;
   color:rgb(254, 48, 48);
+  margin-top:0.5em;
 }
 
 .login-form {
   width:90%;
-  height: 3em;
+  height: 2.6em;
 }
 
 .password-form {
   width:90%;
-  height: 3em;
+  height: 2.6em;
 }
 
 .login {
@@ -141,20 +146,20 @@ main {
   }
 
   .mini-message h3 {
-    margin-bottom: 0.5em;
+    font-size: 1.1em;
   }
 
   .form-message {
-    font-size: 1em;
+    font-size: 0.8em;
   }
 
   .form-label {
     margin-right: 1em;
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
 
   .field_with_errors {
-    font-size: 1.1em;
+    font-size: 1.0em;
   }
 
   .login-form, .password-form {
@@ -168,7 +173,7 @@ main {
 
   .btn {
     width: 30%;
-    height: 2em;
+    height: 3em;
   }
 
   .new-registration {
@@ -177,7 +182,7 @@ main {
 
   .registration {
     font-size: 1em;
-    line-height: 2em;
+    line-height: 3em;
   }
 
 }
