--- a/konmiru_app/public/home/index.css
+++ b/konmiru_app/public/home/index.css
@@ -1,90 +1,3 @@
-body {
-  margin:0px;
-  background-color: rgb(243, 250, 245);
-  /* 基本の文字色 */
-  color:#444;
-}
-
-header {
-  width:100%;
-  height: 70px;
-  background-color: white;
-  border-bottom:1px solid rgb(9, 129, 9);
-  display: flex;          
-  align-items: center;
-}
-
-.header-actions {
-  height: 70px;
-  display: flex;  
-   /* 子要素間のスペースを均等にする */
-  justify-content: space-between; 
-  align-items:stretch;
-  width: 100%; 
-}
-
-.header-actions > * {
-  flex: 1; 
-  text-align: center; 
-  border-right: 1px solid #ddd; 
-  padding: 0 2px;  
-  display: flex;           
-  justify-content: center; 
-  align-items: center;     
-}
-
-.header-actions > *:last-child {
-  border-right: none;  
-}
-
-/* ロゴ~ */
-.header-log{
-  color:#fb914a;
-  font-weight: 600;
-}
-
-.fa-utensils {
-  font-size:1.6em;
-}
-
-.logo-text {
-  font-size:0.8em;
-}
-/* ～ロゴ */
-
-.header-link {
-  text-decoration: none;
-  display: flex;           
-  flex-direction: column;  
-  align-items: center;
-}
-
-.link-icon {
-  color:rgb(9, 129, 9);
-  font-size:1.4em;
-}
-
-.header-link-text {
-  color:rgb(9, 129, 9);
-  font-size:0.6em;
-  font-weight: 600;
-}
-
-/* リンク全体に触れると色が変わる */
-.header-link:hover,
-.header-link:hover .link-icon,
-.header-link:hover .header-link-text {
-  color:rgb(118, 216, 118);
-}
-
-.profile-image img {
-  /* 円形は50% */
-  border-radius: 50%; 
-}
-/* ～ヘッダー */
-
-
-/* メイン部分 */
 main {
   width:90%;
   margin:0 auto;
@@ -101,7 +14,7 @@ main {
 
 .search-text {
   color:#66450f;
-  font-size:1em;
+  font-size:0.9em;
   font-weight:600;
   margin-bottom:0.1em;
 }
@@ -116,7 +29,7 @@ main {
 
 #ingredient_name {
   width:100%;
-  height: 3.5em; 
+  height: 3em; 
   transition: padding-right 0.3s;  /* オプション：スムーズな変更のためのアニメーション */
   /* z-indexを効かせるためにはpositionを指定 */
   position: relative; 
@@ -157,7 +70,7 @@ button {
 
 .btn {
   display: inline-block;
-  width: 80%; 
+  width: 70%; 
   height: 3em; 
   box-shadow: 0px 2px #524b42;
   border-radius: 5px;
@@ -189,23 +102,26 @@ button {
   background-color: #f3a876;
 }
 
-/* レシピリスト一覧 */
-.recipe-container {
-  width:90%;
+.container-title{
   margin:0 auto;
-  padding-top:0.3em;
-  margin-top:1.2em;
-  background-color: white;
-  border: 2px solid rgb(9, 129, 9);
-  border-radius: 4px;
+  margin-top: 1.5em;
+  width:85%;
+  height: 2em;
+  line-height: 2em;
+  color:white;
+  background-color: rgb(9, 129, 9);
+  border-radius: 5px;
+  font-weight: 600;
+  font-size:1em;
 }
 
-.container-title{
-  margin-top: 0px;
-  margin-bottom:0.1em;
-  color:rgb(9, 129, 9);
-  font-weight: 600;
-  font-size:1.2em;
+/* レシピリスト一覧 */
+.recipe-container {
+  width:85%;
+  margin:0 auto;
+  background-color: white;
+  border-radius: 5px;
+  border:1px solid rgb(161, 229, 180);
 }
 
 .recipe-no-result {
@@ -227,12 +143,12 @@ button {
 }
 
 .image {
-  border-radius: 0.3em;
+  border-radius: 0.4em;
 }
 
 .recipe-name {
   color:#444;
-  font-size:1em;
+  font-size:0.8em;
   font-weight:500;
 }
 
@@ -304,27 +220,6 @@ button {
     font-size: 18px;
   }
 
-  header {
-    height: 100px;
-  }
-
-  .header-actions {
-    padding: 0 5%;
-  }
-
-  .fa-utensils,
-  .link-icon {
-    font-size: 2em;
-  }
-
-  .logo-text {
-    font-size: 1.2em;
-  }
-
-  .header-link-text {
-    font-size: 0.9em;
-  }
-
   main {
     width: 80%;
   }
@@ -335,7 +230,7 @@ button {
 
   #ingredient_name {  
     width: 100%;
-    height: 4em;
+    height: 3.5em;
   }
 
   button {
@@ -344,7 +239,7 @@ button {
 
   .search-text,
   .announce-text {
-    font-size: 1.4em;
+    font-size: 1.3em;
     margin-bottom: 0.5em;
   }
 
@@ -359,15 +254,16 @@ button {
   }
 
   .recipe-container {
-    width: 60%;
+    width: 50%;
   }
 
   .container-title {
-    font-size: 1.6em;
+    font-size: 1.4em;
+    width:50%
   }
 
   .recipe-name {
-    font-size: 1.4em;
+    font-size: 1.2em;
   }
 
   .item-paginate .page,
