--- a/konmiru_app/app/views/recipes/show.html.erb
+++ b/konmiru_app/app/views/recipes/show.html.erb
@@ -1,4 +1,5 @@
 <!-- CSSファイルの読み込み -->
+<link rel="stylesheet" href="/header/header.css">
 <link rel="stylesheet" href="/recipe/show.css">
 
 <!-- ヘッダー部分 -->
@@ -44,14 +45,10 @@
   <% end %>
   
   <!-- 食材リスト -->
-  <div class="ingredients-container">
-    <div class="ingredients-text">
-      <p class="ingredients-container-title">食材</p>
-      <% @recipe.ingredients.each do |ingredient| %>
-        <p class="ingredients"><%= ingredient.ingredient_name %></p>
-      <% end %>
-    </div>
-  </div>
+    <p class="ingredients-title">食材</p>
+    <% @recipe.ingredients.each do |ingredient| %>
+      <p class="ingredients"><%= ingredient.ingredient_name %></p>
+    <% end %>
 
   <!-- レシピの調理過程 -->
   <div class="recipe-process">
