--- a/konmiru_app/app/views/users/new.html.erb
+++ b/konmiru_app/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <!-- CSSファイルの読み込み -->
+<link rel="stylesheet" href="/header/header.css">
 <link rel="stylesheet" href="/session/new.css">
 
 <!-- ヘッダー部分 -->
