--- a/konmiru_app/app/views/users/show.html.erb
+++ b/konmiru_app/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <!-- CSSファイルの読み込み -->
+<link rel="stylesheet" href="/header/header.css">
 <link rel="stylesheet" href="/home/index.css">
 
 <!-- ヘッダー部分 -->
@@ -26,9 +27,9 @@
     <!-- プロフィール写真 -->
     <div class="profile-image">
       <% if @current_user.profile_image.attached? %>
-        <%= image_tag @current_user.profile_image, size: '50x50' %>
+        <%= image_tag @current_user.profile_image, size: '45x45' %>
       <% else %>
-      <%= image_tag "no_image.png", size: '50x50' %>
+      <%= image_tag "no_image.png", size: '45x45' %>
       <% end %>
     </div>
   </div>
@@ -38,9 +39,9 @@
 
 <!-- メインコンテンツ～ -->
 <main>
+  <p class="container-title"><%= @user.user_name.presence || "ユーザー(#{@user.id})" %>のレシピ</p>
   <div class="recipe-container">
     <!-- ユーザーのレシピ一覧 -->
-    <p class="container-title"><%= @user.user_name.presence || "ユーザー(#{@user.id})" %>のレシピ</p>
     <!-- 食材リストが並ぶ -->
     <% @user.recipes.each do |recipe| %>
       <div class="recipes">
@@ -60,6 +61,12 @@
     <!-- 食材リストここまで -->
 
   </div>
+  <!-- ページネーションのリンク-->
+  <% if @recipes.present? %>
+    <div class="item-paginate">
+      <%= paginate @recipes %>
+    </div>
+  <% end %>
   
 </main>
 <!-- ～メインコンテンツ -->
