--- a/konmiru_app/public/recipe/new.css
+++ b/konmiru_app/public/recipe/new.css
@@ -5,85 +5,6 @@ body {
   color:#444;
 }
 
-header {
-  width:100%;
-  height: 70px;
-  background-color: white;
-  border-bottom:1px solid rgb(9, 129, 9);
-  display: flex;          
-  align-items: center;
-}
-
-.header-actions {
-  height: 70px;
-  display: flex;  
-   /* 子要素間のスペースを均等にする */
-  justify-content: space-between; 
-  align-items:stretch;;  
-  width: 100%; 
-}
-
-.header-actions > * {
-  flex: 1; 
-  text-align: center; 
-  border-right: 1px solid #ddd; 
-  padding: 0 2px;  
-  display: flex;           
-  justify-content: center; 
-  align-items: center;     
-}
-
-.header-actions > *:last-child {
-  border-right: none;  
-}
-
-/* ロゴ~ */
-.header-log{
-  color:#fb914a;
-  font-weight: 600;
-}
-
-.fa-utensils {
-  font-size:1.6em;
-}
-
-.logo-text {
-  font-size:0.8em;
-}
-/* ～ロゴ */
-
-.header-link {
-  text-decoration: none;
-  display: flex;           
-  flex-direction: column;  
-  align-items: center;
-}
-
-.link-icon {
-  color:rgb(9, 129, 9);
-  font-size:1.4em;
-}
-
-.header-link-text {
-  color:rgb(9, 129, 9);
-  font-size:0.6em;
-  font-weight: 600;
-}
-
-/* リンク全体に触れると色が変わる */
-.header-link:hover,
-.header-link:hover .link-icon,
-.header-link:hover .header-link-text {
-  color:rgb(118, 216, 118);
-}
-
-.profile-image img {
-  /* 円形は50% */
-  border-radius: 50%; 
-}
-/* ～ヘッダー */
-
-
 /* メイン部分 */
 main {
   width:90%;
@@ -93,14 +14,14 @@ main {
 
 .search-text {
   color:#66450f;
-  font-size:0.9em;
+  font-size:0.8em;
   font-weight:600;
   margin-bottom:0.8em;
 }
 
 .announce-text {
   color:#fb914a;
-  font-size:1em;
+  font-size:0.8em;
   font-weight:600;
   margin-bottom:0.1em;
   margin-top:0em;
@@ -156,7 +77,7 @@ main {
   border: none;
   border-radius: 0.4em;
   color: white;
-  padding: 1em 2em;
+  padding: 0.8em 1.8em;
   cursor: pointer;
   transition: background-color 0.3s;
   font-size: 1em;
@@ -184,10 +105,11 @@ main {
 }
 
 .recipe-process {
-  width:90%;
+  width:80%;
+  padding:6px;
   border: 0.2em solid  #fb914a;
   border-radius: 0.4em;
-  height: 9em;
+  height: 7em;
   font-size: 1em;
 }
 
@@ -205,8 +127,9 @@ main {
 
 .btn {
   display: inline-block;
-  width: 80%; 
-  height: 3.5em; 
+  width: 70%; 
+  height: 3em; 
+  margin:1.2em 0em;
   box-shadow: 0px 2px #524b42;
   border-radius: 5px;
   position: relative;
@@ -221,39 +144,18 @@ main {
 
 @media (min-width: 768px) {
 
-  /* ヘッダー部分の変更 */
-  header {
-    height: 90px;
-  }
-
-  .header-actions {
-    height: 90px;
-  }
-
-  .fa-utensils {
-    font-size: 2em;
-  }
-
-  .logo-text {
-    font-size: 1em;
-  }
-
-  .header-link-text {
-    font-size: 0.8em;
-  }
-
   /* メイン部分の変更 */
   main {
     width: 70%;
   }
 
   .search-text {
-    font-size: 1.2em;
+    font-size: 1em;
     margin-bottom: 1em;
   }
 
   .announce-text {
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin-bottom: 0.3em;
   }
 
@@ -282,12 +184,13 @@ main {
   }
 
   .recipe-process {
-    width: 80%;
-    height: 10em;
+    width: 70%;
+    height: 8em;
   }
 
   .btn {
     width: 50%;
-    height: 4em;
+    height: 3em;
+    margin-bottom:2em;
   }
 }
