--- a/konmiru_app/public/recipe/show.css
+++ b/konmiru_app/public/recipe/show.css
@@ -1,89 +1,3 @@
-body {
-  margin:0px;
-  background-color: rgb(243, 250, 245);
-  /* 基本の文字色 */
-  color:#444;
-}
-
-header {
-  width:100%;
-  height: 70px;
-  background-color: white;
-  border-bottom:1px solid rgb(9, 129, 9);
-  display: flex;          
-  align-items: center;
-}
-
-.header-actions {
-  height: 70px;
-  display: flex;  
-   /* 子要素間のスペースを均等にする */
-  justify-content: space-between; 
-  align-items:stretch;;  
-  width: 100%; 
-}
-
-.header-actions > * {
-  flex: 1; 
-  text-align: center; 
-  border-right: 1px solid #ddd; 
-  padding: 0 2px;  
-  display: flex;           
-  justify-content: center; 
-  align-items: center;     
-}
-
-.header-actions > *:last-child {
-  border-right: none;  
-}
-
-/* ロゴ~ */
-.header-log{
-  color:#fb914a;
-  font-weight: 600;
-}
-
-.fa-utensils {
-  font-size:1.6em;
-}
-
-.logo-text {
-  font-size:0.8em;
-}
-/* ～ロゴ */
-
-.header-link {
-  text-decoration: none;
-  display: flex;           
-  flex-direction: column;  
-  align-items: center;
-}
-
-.link-icon {
-  color:rgb(9, 129, 9);
-  font-size:1.4em;
-}
-
-.header-link-text {
-  color:rgb(9, 129, 9);
-  font-size:0.6em;
-  font-weight: 600;
-}
-
-/* リンク全体に触れると色が変わる */
-.header-link:hover,
-.header-link:hover .link-icon,
-.header-link:hover .header-link-text {
-  color:rgb(118, 216, 118);
-}
-
-.profile-image img {
-  /* 円形は50% */
-  border-radius: 50%; 
-}
-/* ～ヘッダー */
-
-
 /* メイン部分 */
 main {
   width:90%;
@@ -107,46 +21,40 @@ main {
 .image {
   border-radius: 0.3em;
   border: 0.1em solid #fb914a;
-}
-
-/* 食材リスト～ */
-.ingredients-container {
-  width:200px;
-  margin: 0 auto;
-  background-color: white;
-  border: 1px solid rgb(9, 129, 9);
-  border-radius: 1em;
-}
-
-.ingredients-text {
-  margin:0.4em;
-}
-
-.ingredients-text {
-  text-align: left;
-}
-
-.ingredients-container-title {
-  margin-top:0em;
-  margin-bottom:0.2em;
-  color: rgb(9, 129, 9);
-  font-weight: 600;
-}
-
-.ingredients {
-  font-size:0.8em;
-  color:#444;
-  font-weight:600;
-  margin:0.2em 0em;
+  margin-bottom: 0.8em;
 }
 
 /* ～食材リスト */
+.ingredients-title {
+  width:50%;
+  margin: 0 auto;
+  height: 1.5em;
+  line-height: 1.5em;
+  border-radius: 5px;
+  font-size: 1em;
+  font-weight: 600;
+  background-color:rgb(9, 129, 9);
+  color:white;
+}
+
+.ingredients {
+  background-color:white;
+  width:50%;
+  margin: 0 auto;
+  font-weight: 600;
+  font-size: 0.9em;
+  padding: 0.4em 0em;
+  border-right:1px solid rgb(161, 229, 180);
+  border-left:1px solid rgb(161, 229, 180);
+}
 
 .recipe-process {
+  padding:5px;
   border: 0.2em solid  #fb914a;
   border-radius: 0.4em;
   height: 7em;
-  margin-top:1em;
+  width:80%;
+  margin:1em auto;
   background-color: white;
 }
 
@@ -175,7 +83,6 @@ main {
 
 .recipe-edit {
   text-decoration: none;
-  margin-top:1em;
   color:white;
   font-size:14px;
   font-weight: 600;
@@ -208,34 +115,12 @@ main {
       font-size: 18px; /* 文字のサイズを大きくする */
   }
 
-  header {
-      height: 80px; /* ヘッダーの高さを少し大きく */
-  }
-
-  .header-actions {
-      height: 80px; /* headerの高さに合わせて調整 */
-      padding: 0 20px; /* 左右の余白を追加 */
-  }
-
-  .fa-utensils,
-  .link-icon {
-      font-size: 2em; /* アイコンのサイズを大きく */
-  }
-
-  .logo-text {
-      font-size: 1.2em; /* ロゴテキストのサイズを大きく */
-  }
-
-  .header-link-text {
-      font-size: 0.8em; /* リンクテキストのサイズを大きく */
-  }
-
   main {
       width: 70%; /* メインコンテンツの幅を少し狭く */
   }
 
   .recipe-title {
-      font-size: 2em; /* レシピタイトルのサイズを大きく */
+  font-size: 1.6em; /* レシピタイトルのサイズを大きく */
   }
 
   .image {
@@ -243,15 +128,15 @@ main {
       max-height: 280px;
   }
 
-  .ingredients-container {
-      width: 60%; /* 食材リストのコンテナの幅を大きく */
-      max-width: 500px; /* 最大幅も指定 */
-      text-align: left; /* 左寄せに変更 */
-      padding: 20px; /* 内側の余白を追加 */
+  .ingredients-title {
+    width:30%;
+  }
+
+  .ingredients {
+    width:30%;
   }
 
   .recipe-process {
-      margin-top: 2em; /* 上の余白を大きく */
       padding: 20px; /* 内側の余白を追加 */
   }
 
